# llm-bridge

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.yaml
.github/workflows/: release.yml  rust.yml
deploy/: .env.example  README.md  config.example.yaml  docker-compose.yml  llm-bridge.service  run-shim.sh
docs/superpowers/plans/: 2026-05-31-llm-bridge-phase1-core.md  2026-05-31-llm-bridge-phase2-streaming-sessions.md  2026-05-31-llm-bridge-phase3-codex-agy-sandbox.md  2026-05-31-llm-bridge-phase4a-mcp-protocol.md  2026-05-31-llm-bridge-phase4b-mcp-bridge.md
docs/superpowers/specs/: 2026-05-31-llm-bridge-design.md
src/: config.rs  http.rs  lib.rs  main.rs  mcp.rs  openai.rs  orchestrator.rs  process.rs  registry.rs  routing.rs  sandbox.rs  session.rs  suspend.rs  transcript.rs  validate.rs
src/engine/: agy.rs  claude.rs  codex.rs  mod.rs
tests/: e2e_smoke.rs  http_integration.rs
tests/fixtures/: agy_print.txt  claude_result.json  claude_stream_error.jsonl  claude_stream_text.jsonl  codex_stream_error.jsonl  codex_stream_text.jsonl
