[package]
name = "llm-bridge"
version = "0.1.0"
edition = "2021"
rust-version = "1.93"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "io-util", "sync", "net", "signal"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"            # NOTE: archived but functional on 1.93; swap to serde_yml later if needed
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
async-stream = "0.3"
rmcp = { version = "1.7", features = ["client", "transport-streamable-http-server", "transport-streamable-http-server-session"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }   # ServiceExt::oneshot for router tests
http-body-util = "0.1"                              # collect response bodies in tests

[features]
# e2e_smoke shells out to a real installed `claude`; off by default so CI/`cargo test` stays hermetic
e2e_smoke = []
